Fix resume URLs to use full backend URL

--- a/backend/emails/templates/applicationReceived.hbs
+++ b/backend/emails/templates/applicationReceived.hbs
@@ -4,7 +4,7 @@
     <p>You have a new application for <strong>{{jobTitle}}</strong>.</p>
     <p><strong>Applicant:</strong> {{applicantName}} ({{applicantEmail}})</p>
     {{#if resumeUrl}}
-      <p><a href="{{resumeUrl}}" target="_blank">View Resume</a></p>
+      <p><a href="{{fullResumeUrl}}" target="_blank">View Resume</a></p>
     {{/if}}
     <p>Thanks,<br/>Job Portal</p>
   </body>
