--- a/backend/emails/templates/applicationReceived.hbs
+++ b/backend/emails/templates/applicationReceived.hbs
@@ -1,9 +1,10 @@
+<!-- backend/emails/templates/applicationReceived.hbs -->
 <html>
   <body style="font-family: Arial, sans-serif;">
     <h2>New Application Received</h2>
     <p>You have a new application for <strong>{{jobTitle}}</strong>.</p>
     <p><strong>Applicant:</strong> {{applicantName}} ({{applicantEmail}})</p>
-    {{#if resumeUrl}}
+    {{#if fullResumeUrl}}
       <p><a href="{{fullResumeUrl}}" target="_blank">View Resume</a></p>
     {{/if}}
     <p>Thanks,<br/>Job Portal</p>
