Fix resume URLs to use full backend URL

--- a/backend/emails/templates/passwordReset.hbs
+++ b/backend/emails/templates/passwordReset.hbs
@@ -3,7 +3,9 @@
     <h2>Password reset request</h2>
     <p>Hello {{name}},</p>
     <p>We received a request to reset your password. Click the link below to choose a new password (this link expires in 1 hour):</p>
-    <p><a href="{{resetUrl}}">{{resetUrl}}</a></p>
+    <p> <a href="{{resetUrl}}" style="padding:10px 20px; background:#007bff; color:#fff; text-decoration:none;">
+        Reset Password
+      </a></p>
     <p>If you didn't request this, you can safely ignore this email.</p>
     <p>Thanks,<br/>Job Portal</p>
   </body>
