--- a/backend/emails/templates/applicantReceived.hbs
+++ b/backend/emails/templates/applicantReceived.hbs
@@ -14,7 +14,7 @@
         </p>
       {{/if}}
 
-      <p style="color:#6b7280;font-size:13px">This is an automated confirmation from JobNow.</p>
+      <p style="color:#6b7280;font-size:13px">This is an automated confirmation from JobRun.</p>
     </td>
   </tr>
 </table>
