--- a/backend/emails/templates/applicationReceived.hbs
+++ b/backend/emails/templates/applicationReceived.hbs
@@ -7,6 +7,6 @@
     {{#if fullResumeUrl}}
       <p><a href="{{fullResumeUrl}}" target="_blank">View Resume</a></p>
     {{/if}}
-    <p>Thanks,<br/>Job Portal</p>
+    <p>Thanks,<br/>Job Run</p>
   </body>
 </html>
