--- a/backend/emails/templates/recruiterStatusUpdate.hbs
+++ b/backend/emails/templates/recruiterStatusUpdate.hbs
@@ -5,6 +5,6 @@
     <p>The application for <strong>{{jobTitle}}</strong> by <strong>{{applicantName}}</strong> ({{applicantEmail}})
     has been updated to: <strong>{{status}}</strong>. Please contact the Selected Candidate though Mail or Phone Number.</p>
     {{#if note}}<p>Note from you: {{note}}</p>{{/if}}
-    <p>Thanks,<br/>Job Portal</p>
+    <p>Thanks,<br/>Job Run</p>
   </body>
 </html>
