--- a/backend/emails/templates/passwordReset.hbs
+++ b/backend/emails/templates/passwordReset.hbs
@@ -7,6 +7,6 @@
         Reset Password
       </a></p>
     <p>If you didn't request this, you can safely ignore this email.</p>
-    <p>Thanks,<br/>Job Portal</p>
+    <p>Thanks,<br/>Job Run</p>
   </body>
 </html>
